--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Diego Velazquez Correa"
+title                    : "Diego Velazquez Correa / gfdl"
 title_separator          : "-"
 name                     : &name "Diego Velazquez Correa"
 description              : &description "personal description"
