Added information on the sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Diego Velazquez Correa"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Third year student at Virginia Tech\nB.S. Communications and Networking\nB.S. Machine Learning"
   location         : "Blacksburg, VA"
   employer         : "Virginia Tech"
   uri              : # URL
