--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "diegovc121703/diegovc121703.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "pfl.png"
   name             : "Diego Velazquez Correa"
   pronouns         : # example: "she/her"  
   bio              : "Third year ECE student at Virginia Tech"
